2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* src/powerpc.ld: 
	Added .eh_frame to data section. This is a stopgap fix to allow
	C++ programs that define exceptions to link and run. It does not
	allow them to actually throw exceptions, since that depends on
	compiler changes that have not been made. Further, more
	far-reaching, linker script changes will also be needs when that
	happens.
	Added libsupc++.a to GROUP() directive for GCC versions later than
	3.0.

2003-03-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/hal_arch.h (HAL_THREAD_INIT_CONTEXT): Initialize
	what would be FP and LR in the previous stack frame to make
	GDB backtraces happy.

2003-01-03  Gary Thomas  <gary@mlbassoc.com>

	* include/hal_mem.h (CYGARC_MEMDESC_NOCACHE_PA): New macro which
	allows defining non-cached space with non 1-1 mapping.

2002-12-24  Gary Thomas  <gary@mlbassoc.com>

	* src/vectors.S: 
	* cdl/hal_powerpc.cdl: Add option to allow ROM code to simply
	jump to the startup code, instead of using an absolute address.

2002-11-14  Gary Thomas  <gthomas@ecoscentric.com>

	* src/vectors.S: Provide pointer to saved registers on interrupt.
	This is necessary for profiling support.

2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>

	* src/hal_misc.c (hal_enable_caches): Support new CDL options for
	how [mode] to enable DATA cache.

2002-08-05  Gary Thomas  <gary@chez-thomas.org>
2002-08-05  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>	

	* include/arch.inc: hal_fpu_load regs was not loading registers!

2002-08-01  Gary Thomas  <gary@mlbassoc.com>
 
 	* include/hal_io.h: 
 	* include/hal_intr.h: Allow more variant/platform overrides.
 
2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>

	* src/vectors.S:
	Don't use .file as it can confuse debugging since the .file
	doesn't contain the path and therefore the debugger will never
	know where it lives! This conflicts with using -Wa,--gstabs.

2002-04-25  Jonathan Larmour  <jlarmour@redhat.com>
